// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Version snapshots renders a dash as plain text without version text and with version href 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 600;
  text-transform: none;
  font-style: normal;
  white-space: nowrap;
  -webkit-transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  -webkit-transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c2 {
  padding: 4px;
}

<div
  className="c0 Version"
>
  <span
    className="c1"
    size="medium"
  >
    product name
    :
  </span>
  <div
    className="c2"
  />
  <span
    className="c3"
    size="medium"
  >
    -
  </span>
</div>
`;

exports[`Version snapshots renders a dash without version text and without version href 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 600;
  text-transform: none;
  font-style: normal;
  white-space: nowrap;
  -webkit-transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  -webkit-transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c2 {
  padding: 4px;
}

<div
  className="c0 Version"
>
  <span
    className="c1"
    size="medium"
  >
    product name
    :
  </span>
  <div
    className="c2"
  />
  <span
    className="c3"
    size="medium"
  >
    -
  </span>
</div>
`;

exports[`Version snapshots renders a link with version text and version href 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 600;
  text-transform: none;
  font-style: normal;
  white-space: nowrap;
  -webkit-transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c4 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  color: #00b3ec;
  -webkit-transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c5 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 600;
  text-transform: none;
  font-style: normal;
  -webkit-transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c2 {
  padding: 4px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0 Version"
>
  <span
    className="c1"
    size="medium"
  >
    product name
    :
  </span>
  <div
    className="c2"
  />
  <a
    className="c3"
    href="https://github.com/weaveworks/weave-gitops"
    rel="noreferrer"
    target="_blank"
  >
    <span
      className="c4"
      color="primary"
      size="medium"
    >
      <span
        className="c5"
        size="medium"
      >
        version text
      </span>
    </span>
  </a>
</div>
`;

exports[`Version snapshots renders plain text with version text and without version href 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c1 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 600;
  text-transform: none;
  font-style: normal;
  white-space: nowrap;
  -webkit-transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  font-family: 'proxima-nova',Helvetica,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  text-transform: none;
  font-style: normal;
  -webkit-transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: color 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c2 {
  padding: 4px;
}

<div
  className="c0 Version"
>
  <span
    className="c1"
    size="medium"
  >
    product name
    :
  </span>
  <div
    className="c2"
  />
  <span
    className="c3"
    size="medium"
  >
    version text
  </span>
</div>
`;
